# snakemake-executor-plugin-vastai

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/skills/vastai-executor/: SKILL.md
snakemake_executor_plugin_vastai/: __init__.py  _common.py  sshtransfer.py
tests/: test_cleanup.py  test_credentials.py  test_e2e.py  test_image.py  test_lifecycle.py  test_query.py  test_scripts.py  test_sshtransfer.py
